--- a/index.html
+++ b/index.html
@@ -8,7 +8,80 @@
     <link rel="stylesheet" href="./public/css/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="bg-light">
+    <section class="m-5">
+        <div id="containerH1" class="container d-flex align-items-center">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-white fs-5">Le DOM - Exo : StyleGenerator</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="m-5">
+        <div id="containerBtn" class="container p-2">
+            <!-- ROW 1 -->
+            <div class="row">
+                <div class="col-6 d-flex">
+                    <!-- BOUTONS COULEURS -->
+                    <button class="btn btnColor bg-light">W</button>
+                    <button class="btn btnColor bg-danger text-white">R</button>
+                    <button class="btn btnColor bg-success text-white">G</button>
+                    <button class="btn btnColor bg-primary text-white">B</button>
+                    <!-- BOUTONS COULEURS FIN -->
+                    <!-- BOUTONS BORDER -->
+                    <button class="btn btnBorder bg-light"></button>
+                    <button class="btn btnBorder bg-light"></button>
+                    <button class="btn btnBorder bg-light"></button>
+                    <!-- BOUTONS BORDER FIN -->
+                    <!-- BOUTONS TOP -->
+                    <button class="btn btnTop bg-light">top</button>
+                    <button class="btn btnTop bg-light">top</button>
+                    <button class="btn btnTop bg-light">top</button>
+                    <!-- BOUTONS TOP FIN -->
+                </div>
+            </div>
+            <!-- ROW 1 FIN -->
+            <!-- ROW 2 -->
+            <div class="row">
+                <div class="col-6 pt-3">
+                    <!-- BOUTONS BORDER WIDTH -->
+                    <button class="btn btnBorderWidth bg-light">
+                        <div class="rectangle">
+
+                        </div>
+                    </button>
+                        <input class="btn btnBorderWidth bg-light"type="number">
+                        <input class="btn btnBorderWidth bg-light"type="number">
+                        <input class="btn btnBorderWidth bg-light"type="number">
+                        <input class="btn btnBorderWidth bg-light"type="number">
+                        <input class="btn btnBorderWidth bg-light"type="number">
+                    <!--  BOUTONS BORDER WIDTH FIN -->
+                </div>
+            </div>
+            <!-- ROW 2 FIN -->
+            <!-- ROW 3 -->
+            <div class="row">
+                <div class="col-6 pt-3">
+                        <input class="btn btnCorner bg-light" type="number">
+                        <input class="btn btnCorner bg-light" type="number">
+                        <input class="btn btnCorner bg-light" type="number">
+                        <input class="btn btnCorner bg-light" type="number">
+                        <input class="btn btnCorner bg-light" type="number">
+                </div>
+            </div>
+            <!-- ROW 3 FIN -->
+                <div class="row p-5">
+                    <div class="col-6">
+                        <div class="styleZone">
+    
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
+        
     <!-- JS SCRIPT -->
     <script src="./public/js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
