--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                 <div class="col-6 pt-3">
                     <!-- BOUTONS BORDER WIDTH -->
                     <button class="btn btnBorderWidth bg-light">
-                        <div class="rectangle">
-
-                        </div>
+                        <input type="color" class="rectangle">
                     </button>
                         <input class="btn btnBorderWidth bg-light"type="number">
                         <input class="btn btnBorderWidth bg-light"type="number">
